// Vitest Snapshot v1

exports[`attach Puppeteer > should pass for Aerokube Moon CDP 1`] = `
[
  [
    {
      "browserWSEndpoint": "ws://my.grid:4444/devtools/foobar-123",
      "defaultViewport": null,
      "headers": {
        "Authorization": "OAuth token",
      },
    },
  ],
]
`;

exports[`attach Puppeteer > should pass for Aerokube Selenoid CDP 1`] = `
[
  [
    {
      "browserWSEndpoint": "ws://my.grid:4444/devtools/foobar-123",
      "defaultViewport": null,
      "headers": {
        "Authorization": "OAuth token",
      },
    },
  ],
]
`;

exports[`attach Puppeteer > should pass for Chrome 1`] = `
[
  [
    {
      "browserURL": "http://localhost:1234",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`attach Puppeteer > should pass for Edge 1`] = `
[
  [
    {
      "browserURL": "http://localhost:1234",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`attach Puppeteer > should pass for Firefox (DevTools) 1`] = `
[
  [
    {
      "browserURL": "http://localhost:localhost:1234",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`attach Puppeteer > should pass for Firefox 1`] = `
[
  [
    {
      "browserURL": "http://localhost:4321",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`attach Puppeteer > should pass for Firefox and moz:debuggerAddress flag enabled 1`] = `
[
  [
    {
      "browserURL": "localhost:1234",
      "defaultViewport": null,
    },
  ],
]
`;

exports[`attach Puppeteer > should pass for Selenium CDP 1`] = `
[
  [
    {
      "browserWSEndpoint": "http://my.grid:1234/session/mytestsession/se/cdp",
      "defaultViewport": null,
      "headers": {
        "Authorization": "OAuth token",
      },
    },
  ],
]
`;
